Stopped table headings from wrapping on desktop.

--- a/resources/sass/styles/07-components/_components.product-table.scss
+++ b/resources/sass/styles/07-components/_components.product-table.scss
@@ -46,6 +46,7 @@ $table-img-size:								$leading * 2;
 			top: $leading * 2.5;
 			background-color: $table-header-bg;
 			z-index: 2;
+			white-space: nowrap;
 
 			&:before {
 				content: '';
